[Update] WS to Streamed Response
